LIST OF CHANGES
---------------

 - 'last_changed' columns added to both 'iseq_product_metrics' and
   'iseq_run_lane_metrics' tables
 - 'qc_seq' column addedto the 'iseq_run_lane_metrics' table
 - redundant 'iseq_pm_run_index' indexed dropped from 'iseq_product_metrics'
   table
 - changes to enable saving results for merged entities to'iseq_product_metrics':
     NOT NULL constraint dropped from 'id_run' and 'position' columns;
     nullable 'id_iseq_product' column added to save composition digest;
     nullable 'iseq_composition_tmp' added to save a short form of composition
     JSON, needed because we do not have the linking table yet.

release 2.11
 - added metric column to iseq_product_metrics for RNA: MT expression in pct of TPM.
 - add target fields to iseq_product_metrics

release 2.10
 - added metrics columns to iseq_product_metrics for GbS

release 2.9
 - added metrics columns to iseq_product_metrics (for RNA)
 - superfluous database indexes dropped
 - DBIx schema update for primer_panel
 - added columns tag_hops_percent and tag_hops_power to iseq_run_lane_metrics table

release 2.8
 - added DBIx binding for oseq_flowcell table (describes LIMS info for ONT)
 - Travis build - for Perl v 5.22 change to interpreter with threaded support

release 2.7
 - DBIx binding update

release 2.6
 - ensure lists of study users email addresses do not contain empty or undefined entries

release 2.5
 - add column run_priority to iseq_run_lane_metrics table

release 2.4
 - change in use of cycles value; expected_cycles calculated from iseq_flowcell read lengths and length of tag sequence(s).

release 2.3
 - library_type added to LibraryDigest entity

release 2.2
 - DBIx schema update

release 2.1
 - small change to LibraryDigest to support non SS tracked libraries.
 - use custom build base class to get correct version in a distribution
 - Travis tweaks
   + add deployment to GitHub Releases